# gedcom-navigator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  LICENSE.md  pytest.ini  run_tests.sh  start.ps1  start.sh
debug/: 1.json  2.json  5.json  a.json  aa.json  b.json  bb.json  c.json  cc.json  d.json  descendants.json  e.json  f.json  g.json  pedigree.json
dev/: AppxManifest.xml.template  appstore-screenshot.sh  build-and-release.sh  build-linux.sh  build-mac-appstore.sh  build-mac.sh  build-pypi.sh  build-winget.ps1  build.ps1  build.sh  bump.sh  ctk_tooltip.patch  entitlements-appstore.plist  extract_strings.py  find_ffi_dll.py  fix-dylib-paths.sh  gedcom-navigator.iss  gedcom-navigator.template  gedcom-words.txt  gedcom_dna_finder_gui.spec  gedcom_navigator_cli.spec  gedcom_navigator_gui.spec  generate-appstore-assets.py  generate-icns.sh  generate_icon.py  generate_msix_assets.py  generate_sample_gedcom.py  hatch_build.py  layout_compare.py  pyproject.toml  requirements-dev.txt  requirements-windows.txt  requirements.txt  run_coverage.ps1  run_coverage.sh  run_tests.ps1  run_tests.sh  show-provisioning-profile-developer-certificate.py  test-mac-appstore.sh  translate-po-deepl.ps1  (+5 more)
dev/winget/: AdamKessel.GEDCOMNavigator.installer.template  AdamKessel.GEDCOMNavigator.installer.yaml  AdamKessel.GEDCOMNavigator.locale.en-US.template  AdamKessel.GEDCOMNavigator.locale.en-US.yaml  AdamKessel.GEDCOMNavigator.yaml  AdamKessel.GEDCOMNavigator.yaml.template
docs/: BUILD.md  CHANGELOG.md  DEVELOPMENT.md  HELP.md  KEYBOARD_SHORTCUTS.md  LINUX_ISSUES.md  MAC_SECURITY.md  OLD-MAC-SECURITY.md  PRIVACY_POLICY.md  README-translate-po-deepl.md  README.md  TECHNICAL.md  TODO.md  WINDOWS_SECURITY.md  transliterated-name-search-plan.md
gedcom_dna_finder/: __init__.py  cli.py  gui.py
gedcom_navigator/: __init__.py  cli.py  gui.py
icons/: gedcom_navigator.icns
locales/: gedcom_navigator.pot
samples/: README.md  fictional_genealogy.ged
scripts/: _capture_server.py  generate-appstore-assets.py  start.ps1  start.sh  test-gui.ps1  test-gui.sh  wstart.sh
src/: gedcom_config.py  gedcom_core.py  gedcom_data_model.py  gedcom_debug.py  gedcom_display.py  gedcom_dna_finder_cli.py  gedcom_dna_finder_gui.py  gedcom_family_tree.py  gedcom_family_tree_layout.py  gedcom_family_units.py  gedcom_i18n.py  (+33 more)
(+35 files in other folders)
