[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gedcom-navigator"
dynamic = ["version"]
description = "Find the nearest DNA-flagged relatives in a GEDCOM family tree"
readme = {file = "../docs/README.md", content-type = "text/markdown"}
license = {text = "BSD-2-Clause"}
authors = [{name = "Adam Kessel", email = "ajkessel@gmail.com"}]
keywords = ["gedcom", "genealogy", "dna", "ancestry", "family-tree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Other/Nonlisted Topic",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
# tkinter ships with the official Python installers on Windows and macOS.
# On Linux it is typically in a separate OS package (e.g. python3-tk).
gui = [
    "customtkinter>=5.2.0",
    "CTkToolTip>=0.1.0",
    "pillow",
    "certifi; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
]

[project.urls]
Homepage = "https://github.com/ajkessel/gedcom-navigator"
Repository = "https://github.com/ajkessel/gedcom-navigator"
"Bug Tracker" = "https://github.com/ajkessel/gedcom-navigator/issues"
Changelog = "https://github.com/ajkessel/gedcom-navigator/blob/main/docs/CHANGELOG.md"

# CLI entry point (console)
[project.scripts]
gedcom-navigator = "gedcom_navigator.cli:main"

# GUI entry point (no console window on Windows)
[project.gui-scripts]
gedcom_navigator_gui = "gedcom_navigator.gui:main"

# hatch_build.py sets build_data["force_include"] dynamically, so hatchling's
# auto-discovery must be disabled to prevent it including dev/ files.
[tool.hatch.build.targets.wheel]
packages = []

[tool.hatch.version]
path = "../gedcom_navigator/__init__.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
